--- a/src/yuzu/CMakeLists.txt
+++ b/src/yuzu/CMakeLists.txt
@@ -197,4 +197,9 @@ if (MSVC)
     copy_yuzu_Qt5_deps(yuzu)
     copy_yuzu_SDL_deps(yuzu)
     copy_yuzu_unicorn_deps(yuzu)
+
+    if (ENABLE_FFMPEG)
+        include(CopyYuzuFFmpegDeps)
+        copy_yuzu_FFmpeg_deps(yuzu)
+    endif()
 endif()
