--- a/.travis.yml
+++ b/.travis.yml
@@ -20,28 +20,22 @@ matrix:
       install: "./.travis/linux/deps.sh"
       script: "./.travis/linux/build.sh"
       after_success: "./.travis/linux/upload.sh"
-      cache: ccache
-    - os: osx
-      env: NAME="macos build"
-      sudo: false
-      osx_image: xcode10.2
-      install: "./.travis/macos/deps.sh"
-      script: "./.travis/macos/build.sh"
-      after_success: "./.travis/macos/upload.sh"
-      cache: ccache
+      cache: ccache   
     - os: linux
-      env: NAME="MinGW build"
+      env: NAME="transifex push"
       sudo: required
       dist: trusty
-      services: docker
       addons:
         apt:
           packages:
-            - p7zip-full
-      install: "./.travis/linux-mingw/deps.sh"
-      script: "./.travis/linux-mingw/build.sh"
-      after_success: "./.travis/linux-mingw/upload.sh"
-      cache: ccache
+            - libsdl2-dev
+            - qtbase5-dev
+            - libqt5opengl5-dev
+            - qttools5-dev
+            - qttools5-dev-tools
+      install: "./.travis/transifex/deps.sh"
+      script: "./.travis/transifex/build.sh"
+      after_success: "./.travis/transifex/upload.sh"
 
 deploy:
   provider: releases
