--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,9 @@ matrix:
       env: NAME="transifex push"
       sudo: required
       dist: trusty
-      addons:
-        apt:
-          packages:
-            - libsdl2-dev
-            - qtbase5-dev
-            - libqt5opengl5-dev
-            - qttools5-dev
-            - qttools5-dev-tools
+      services: docker
       install: "./.travis/transifex/deps.sh"
       script: "./.travis/transifex/build.sh"
-      after_success: "./.travis/transifex/upload.sh"
 
 deploy:
   provider: releases
