--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,11 @@ matrix:
       sudo: required
       dist: trusty
       services: docker
-     addons:
+      addons:
         apt:
           packages:
-            - python3
+            - python-dev
+            - python3-dev
       install: "./.travis/transifex/deps.sh"
       script: "./.travis/transifex/build.sh"
 
